--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,9 +44,8 @@ iframe {
 }
 
 img.hodegi_logo {
-  margin: 0 1vw;
+  margin: 1vw;
   width: min(30vw,432px);
-  vertical-align: middle;
 }
 
 .cta_area {
