--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,6 +38,18 @@ iframe {
   margin-left: 5vw;
   border: 1px solid #B5B5B5;
 }
+iframe.cancer_iframe {
+  height: 1900px;
+}
+iframe.regular_iframe {
+  height: 1200px;
+}
+iframe.lifetime_iframe {
+  height: 1160px;
+}
+iframe.income_iframe {
+  height: 1400px;
+}
 
 .attention {
   width: 80%;
