--- a/stylesheet.css
+++ b/stylesheet.css
@@ -495,5 +495,5 @@ p.pattern_male {
     text-align: center;
     font-size: 39px;
     color: hotpink;
-    margin-bottom: 15px;
+    margin: 15px 0;
 }
